change label on nav graph

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,7 +18,7 @@
     <fragment
         android:id="@+id/SecondFragment"
         android:name="com.example.test.fragments.InfoPokemonFragment"
-        android:label="@string/second_fragment_label"
+        android:label="Info Pokemon"
         tools:layout="@layout/fragment_detail_pokemon">
 
         <action
